tests/valid/test_type_01.wyal
type nat is (int n) where:
    n >= 0

assert:
    forall(nat x):
        x >= 0
