tests/invalid/test_026.wyal
type nat is (int x) where x >= 0

assert:
    forall (int x):
       x is nat  